crates/swc_ecma_parser/tests/test262-error-references/fail/959004d1d6a439d7.js.stderr
error: Unexpected character 'ğŸ€’'
 --> $DIR/tests/test262-parser/fail/959004d1d6a439d7.js:1:5
  |
1 | var ğŸ€’
  |     ^

